--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,6 +7,8 @@
 </div>
 <h2> Title / Trending Date </h2>
 <div class="searchResults"> {{{ searchResultsClient }}} </div>
+<h2> Author / Trending Date / Likes </h2>
+<div class="searchResultsChannel"> {{{ searchResultsChannelClient }}} </div>
 
 <script>
     $(function() {
