Clean up search ui/ux

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,7 +6,7 @@
         <div class="loadingIndicator">Loading Results ...</div>
     </form>
 </div>
-<h2> Title / Trending Date </h2>
+<h2 style="padding-left: 7px"> Search Results </h2>
 <div class="searchResults"> {{{ searchResultsClient }}} </div>
 <h2> Author / Trending Date / Likes </h2>
 <div class="searchResultsChannel"> {{{ searchResultsChannelClient }}} </div>
