--- a/public/style.css
+++ b/public/style.css
@@ -9,3 +9,28 @@
 
     display: none;
 }
+
+.video {
+    display: flex;
+
+    border: 2px solid black;
+    margin: 5px;
+}
+
+.videoContent {
+    display: flex;
+    flex-direction: column;
+}
+
+.videoTitle {
+    font-weight: bold;
+    padding-left: 10px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.videoInfo {
+    padding-left: 10px;
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
