Create button to take input of video link

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,3 +18,16 @@
         })
     })
 </script>
+        
+<form action="/temp" method="POST">
+        <input type="text" name="YTAddLink" placeholder="Add YT Video to Dataset">
+        <input type="submit" class='addBtn' name="addDS" value="Add Video" />
+</form>
+<script>
+    $(function() {
+        $('.addBtn').click(() => {
+
+        })
+    })
+</script>
+
