--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,6 +6,20 @@
         <div class="loadingIndicator">Loading Results ...</div>
     </form>
 </div>
+
+<div>
+    <form action="/update" method="POST">
+        <input type="text" name="YT_VideoIDUpdateBar" placeholder="VideoID to update">
+
+        <input type="text" name="YT_TitleUpdateBar" placeholder="Title to update">
+        <input type="text" name="YT_CategoryUpdateBar" placeholder="Category to update">
+        <input type="text" name="YT_TagsUpdateBar" placeholder="Tags to update">
+
+        <input type="submit" class='updateBtn' name="updateDS" value="Update" />
+        <div class="updateIndicator">Updated!</div>
+    </form>
+</div>
+
 <h2 style="padding-left: 7px"> Search Results </h2>
 <div class="searchResults"> {{{ searchResultsClient }}} </div>
 <h2> Author / Trending Date / Likes </h2>
@@ -15,6 +29,12 @@
     $(function() {
         $('.searchBtn').click(() => {
             $('.loadingIndicator').show();
+        })
+    })
+
+    $(function () {
+        $('.updateBtn').click(() => {
+            $('.updateIndicator').show();
         })
     })
 </script>
