button removed on click

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -72,14 +72,7 @@
 </script>
 </script>
         
-<form action="/temp" method="POST">
+<form action="/addVideo" method="POST">
         <input type="text" name="YTAddLink" placeholder="Add YT Video to Dataset">
         <input type="submit" class='addBtn' name="addDS" value="Add Video" />
 </form>
-<script>
-    $(function() {
-        $('.addBtn').click(() => {
-
-        })
-    })
-</script>
