--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,29 @@
+{{!-- navbar --}}
+<nav class="navbar navbar-expand-lg navbar-light bg-light"> 
+  <div class="container-fluid">
+    <a class="navbar-brand">Youtube Analytics</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="reliableVids">Most Reliable Videos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">PLACEHOLDER</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        Welcome to our website!
+      </span>
+    </div>
+  </div>
+</nav>
+{{!-- navbar --}}
 <h1> Youtube Dataset Analysis </h1>
 <div>
     <form action="/addVideo" method="POST">
@@ -89,4 +115,4 @@
         $('#videoEdit15').attr('value', cache[index].description);
     }
 </script>
-    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
