--- a/views/reliableVids.handlebars
+++ b/views/reliableVids.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light"> 
+{{!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
   <div class="container-fluid">
     <a class="navbar-brand">Youtube Analytics</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
       </span>
     </div>
   </div>
-</nav>
+</nav> --}}
 <h1> Top 10 Reliable Videos </h1>
 <div>
     <form action="/searchReliable" method="POST">
