--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -28,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a id="homeNav" class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="reliableVids">Most Reliable Videos</a>
+                        <a id="MRVNav" class="nav-link" href="reliableVids">Most Reliable Videos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="analytics">Like/Dislike Ratios</a>
+                        <a id="LDNav" class="nav-link" href="analytics">Like/Dislike Ratios</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
