style change button

--- a/public/style.css
+++ b/public/style.css
@@ -73,6 +73,12 @@
     margin-top: 2px;
 }
 
+.prevBtn {
+    width: fit-content;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .right {
     float: right;
     margin-right:20px;
