--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -14,6 +14,80 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
+{{!-- ------- --}}
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  padding: 0px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+</style>
 </head>
 
 <body>
@@ -40,6 +114,12 @@
                 <span class="navbar-text">
                     Welcome to our website!
                 </span>
+                <span class="navbar-text">
+                    <label class="switch">
+                        <input onclick="myFunction()" type="checkbox" checked>
+                <span class="slider round"></span>
+                </label>
+                </span>
             </div>
         </div>
     </nav>
@@ -48,5 +128,15 @@
         {{{ body }}}
     </div>
 </body>
+<body>
 
+
+<script>
+function myFunction() {
+   var element = document.body;
+   element.classList.toggle("dark-mode");
+}
+</script>
+
+</body>
 </html>
