Update styling in dialogs

--- a/public/style.css
+++ b/public/style.css
@@ -67,6 +67,24 @@
     margin-top: 2px;
 }
 
+.dialogInputDiv {
+    display: flex; 
+    flex-direction: column; 
+    padding-left: 5px;
+    border-radius: 5px;
+    border: 2px solid lightgrey
+}
+
+.dialogInputLabel {
+    font-size: smaller; 
+    color: grey;
+}
+
+.dialogInput {
+    border: 0; 
+    outline: 0;
+}
+
 .deleteBtn {
     width: fit-content;
     margin-left: 10px;
