Changed output of mostliked

--- a/views/mostLiked.handlebars
+++ b/views/mostLiked.handlebars
@@ -1,3 +1,9 @@
 <h1> Most liked video of all time </h1>
 
 <div class="mostLiked">{{{ globalMostLikedVidClient }}}</div>
+
+<div class="right">
+    <iframe id="previewVideo" style="display: right" width="560" height="350"
+            src={{{embedVid}}}>
+    </iframe>
+</div>
