add video and smal cahanes

--- a/views/mostLiked.handlebars
+++ b/views/mostLiked.handlebars
@@ -2,8 +2,6 @@
 
 <div class="mostLiked">{{{ globalMostLikedVidClient }}}</div>
 
-<div class="right">
-    <iframe id="previewVideo" style="display: right" width="560" height="350"
-            src={{{embedVid}}}>
-    </iframe>
-</div>
+<iframe id="previewVideo" style="display:middle" width="560" height="350"
+        src={{{mostLikedVid}}}>
+</iframe>
