--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -21,7 +21,7 @@ body {
   padding: 0px;
   background-color: white;
   color: black;
-  font-size: 25px;
+  {{!-- font-size: 25px; --}}
 }
 
 .dark-mode {
